force-app/main/default/objects/RV_OLF_MRC_Data__c/RV_OLF_MRC_Data__c.object-meta.xml
<CustomObject>
    <description>The object is created to store the precomputed prices to send to OLF</description>
    <label>OLF Precomputed Data</label>
    <nameField>
        <label>OLF MRC Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OLF Precomputed Datas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>