force-app/main/default/objects/RV_OLF_MRC_Data__c/fields/LastModifiedTime__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedTime__c</fullName>
    <label>LastModifiedTime</label>
    <length>100</length>
    <type>Text</type>
</CustomField>