force-app/main/default/objects/RV_OLF_MRC_Data__c/fields/RV_AccountId__c.field-meta.xml
<CustomField>
    <fullName>RV_AccountId__c</fullName>
    <label>AccountId</label>
    <length>30</length>
    <type>Text</type>
</CustomField>