force-app/main/default/objects/RV_OLF_MRC_Data__c/fields/RV_Comment__c.field-meta.xml
<CustomField>
    <fullName>RV_Comment__c</fullName>
    <label>Comment</label>
    <length>30</length>
    <type>Text</type>
</CustomField>