force-app/main/default/objects/RV_OLF_MRC_Data__c/fields/RV_ContractEndDate__c.field-meta.xml
<CustomField>
    <fullName>RV_ContractEndDate__c</fullName>
    <label>ContractEndDate</label>
    <length>30</length>
    <type>Text</type>
</CustomField>