force-app/main/default/objects/RV_OLF_MRC_Data__c/fields/RV_ContractStartDate__c.field-meta.xml
<CustomField>
    <fullName>RV_ContractStartDate__c</fullName>
    <label>ContractStartDate</label>
    <length>30</length>
    <type>Text</type>
</CustomField>