force-app/main/default/objects/RV_OLF_MRC_Data__c/fields/RV_FinalSalesPriceCal__c.field-meta.xml
<CustomField>
    <fullName>RV_FinalSalesPriceCal__c</fullName>
    <label>FinalSalesPriceCal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>