force-app/main/default/objects/RV_OLF_MRC_Data__c/fields/RV_Grade__c.field-meta.xml
<CustomField>
    <fullName>RV_Grade__c</fullName>
    <label>Grade</label>
    <length>30</length>
    <type>Text</type>
</CustomField>