force-app/main/default/objects/RV_OLF_MRC_Data__c/fields/RV_Location__c.field-meta.xml
<CustomField>
    <fullName>RV_Location__c</fullName>
    <label>Location</label>
    <length>30</length>
    <type>Text</type>
</CustomField>