force-app/main/default/objects/RV_OLF_MRC_Data__c/fields/RV_LocationId__c.field-meta.xml
<CustomField>
    <fullName>RV_LocationId__c</fullName>
    <label>LocationId</label>
    <length>30</length>
    <type>Text</type>
</CustomField>