force-app/main/default/objects/RV_OLF_MRC_Data__c/fields/RV_LocationName__c.field-meta.xml
<CustomField>
    <fullName>RV_LocationName__c</fullName>
    <label>LocationName</label>
    <length>30</length>
    <type>Text</type>
</CustomField>