force-app/main/default/objects/RV_OLF_MRC_Data__c/fields/RV_MaterialName__c.field-meta.xml
<CustomField>
    <fullName>RV_MaterialName__c</fullName>
    <label>MaterialName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>