force-app/main/default/objects/RV_OLF_MRC_Data__c/fields/RV_materialNo__c.field-meta.xml
<CustomField>
    <fullName>RV_materialNo__c</fullName>
    <label>MaterialNo</label>
    <length>30</length>
    <type>Text</type>
</CustomField>