force-app/main/default/objects/RV_OLF_MRC_Data__c/fields/RV_MrcId__c.field-meta.xml
<CustomField>
    <fullName>RV_MrcId__c</fullName>
    <label>MrcId</label>
    <length>30</length>
    <type>Text</type>
</CustomField>