force-app/main/default/objects/RV_OLF_MRC_Data__c/fields/RV_MrcName__c.field-meta.xml
<CustomField>
    <fullName>RV_MrcName__c</fullName>
    <label>MrcName</label>
    <length>30</length>
    <type>Text</type>
</CustomField>