force-app/main/default/objects/RV_OLF_MRC_Data__c/fields/RV_OLF_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>RV_OLF_Contact_Email__c</fullName>
    <label>OLF Contact Email</label>
    <type>Email</type>
</CustomField>