force-app/main/default/objects/RV_OLF_MRC_Data__c/fields/RV_OLFAccountName__c.field-meta.xml
<CustomField>
    <fullName>RV_OLFAccountName__c</fullName>
    <label>AccountName</label>
    <length>30</length>
    <type>Text</type>
</CustomField>