force-app/main/default/objects/RV_OLF_MRC_Data__c/fields/RV_OLFSalesOrg__c.field-meta.xml
<CustomField>
    <fullName>RV_OLFSalesOrg__c</fullName>
    <label>SalesOrg</label>
    <length>30</length>
    <type>Text</type>
</CustomField>