force-app/main/default/objects/RV_OLF_MRC_Data__c/fields/RV_OTM__c.field-meta.xml
<CustomField>
    <fullName>RV_OTM__c</fullName>
    <label>OTM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>