force-app/main/default/objects/RV_OLF_MRC_Data__c/fields/RV_PricingCondition__c.field-meta.xml
<CustomField>
    <fullName>RV_PricingCondition__c</fullName>
    <label>PricingCondition</label>
    <length>30</length>
    <type>Text</type>
</CustomField>