force-app/main/default/objects/RV_OLF_MRC_Data__c/fields/RV_RetroAtpVoltoBeReduced__c.field-meta.xml
<CustomField>
    <fullName>RV_RetroAtpVoltoBeReduced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RetroAtpVoltoBeReduced</label>
    <type>Checkbox</type>
</CustomField>