force-app/main/default/objects/RV_OLF_MRC_Data__c/fields/RV_RetroGsapDealCancelOn__c.field-meta.xml
<CustomField>
    <fullName>RV_RetroGsapDealCancelOn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RetroGsapDealCancelOn</label>
    <type>Checkbox</type>
</CustomField>