force-app/main/default/objects/RV_OLF_MRC_Data__c/fields/RV_RetroGsapDealCreateOn__c.field-meta.xml
<CustomField>
    <fullName>RV_RetroGsapDealCreateOn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RetroGsapDealCreateOn</label>
    <type>Checkbox</type>
</CustomField>