force-app/main/default/objects/RV_OLF_MRC_Data__c/fields/RV_RetroVolToBeHedged__c.field-meta.xml
<CustomField>
    <fullName>RV_RetroVolToBeHedged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RetroVolToBeHedged</label>
    <type>Checkbox</type>
</CustomField>