force-app/main/default/objects/RV_OLF_MRC_Data__c/fields/RV_ShipToNumber__c.field-meta.xml
<CustomField>
    <fullName>RV_ShipToNumber__c</fullName>
    <label>ShipToNumber</label>
    <length>30</length>
    <type>Text</type>
</CustomField>