force-app/main/default/objects/RV_OLF_MRC_Data__c/fields/tranche__c.field-meta.xml
<CustomField>
    <fullName>tranche__c</fullName>
    <label>tranche</label>
    <length>30</length>
    <type>Text</type>
</CustomField>