force-app/main/default/objects/RV_OLF_MRC_Data__c/fields/UniqueMRCId__c.field-meta.xml
<CustomField>
    <fullName>UniqueMRCId__c</fullName>
    <externalId>true</externalId>
    <label>UniqueMRCId</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>